crates/ic-lint/tests/snapshots/long_double__long_double_multiple.snap
---
source: crates/ic-lint/tests/long_double.rs
expression: "test_lint_hir(r\"\nstruct Precision {\n    long double a;\n    long double b;\n};\ntypedef long double LD;\n\")"
---
! long-double: long double is not supported
  @ test.idl:3:5

 2 │ struct Precision {
 3 │     long double a;
   │     ˆˆˆˆˆˆˆˆˆˆˆ used here
 4 │     long double b;
 5 │ };

  * long double will be treated as a normal double during codegen

! long-double: long double is not supported
  @ test.idl:4:5

 2 │ struct Precision {
 3 │     long double a;
 4 │     long double b;
   │     ˆˆˆˆˆˆˆˆˆˆˆ used here
 5 │ };
 6 │ typedef long double LD;

  * long double will be treated as a normal double during codegen

! long-double: long double is not supported
  @ test.idl:6:9

 4 │     long double b;
 5 │ };
 6 │ typedef long double LD;
   │         ˆˆˆˆˆˆˆˆˆˆˆ used here

  * long double will be treated as a normal double during codegen
