crates/ic-lint/tests/snapshots/long_double__long_double_typedef.snap
---
source: crates/ic-lint/tests/long_double.rs
expression: "test_lint(r\"\ntypedef long double ExtendedPrecision;\n\")"
---
warning[long-double]: long double is not supported
   ┌ test.idl:2:9
   │
 2 │ typedef long double ExtendedPrecision;
   ·         ^^^^^^^^^^^ used here
   └──
 note: long double will be treated as a normal double during codegen
