crates/ic-lint/tests/snapshots/long_double__long_double_union_variant.snap
---
source: crates/ic-lint/tests/long_double.rs
expression: "test_lint_hir(r\"\nunion Data switch (long) {\ncase 0:\n    double normal;\ncase 1:\n    long double extended;\n};\n\")"
---
! long-double: long double is not supported
  @ test.idl:6:5

 4 │     double normal;
 5 │ case 1:
 6 │     long double extended;
   │     ˆˆˆˆˆˆˆˆˆˆˆ used here
 7 │ };

  * long double will be treated as a normal double during codegen
